--- a/d.html
+++ b/d.html
@@ -36,7 +36,7 @@
     <body>
         <p><img width="200px" src='logo.png' alt='image'></p>
         <h3>Выберете версию:</h3>
-        <p class="p1"> • Labyrinthia alpha v0.0    <a href="Labyrinthia alpha v0.0.html"><button class="btn">Скачать</button></a></p>
+        <p class="p1"> • Labyrinthia alpha v0.0    <a href="Labyrinthia alpha v0.0.zip"><button class="btn">Скачать</button></a></p>
         <i>Не желательно играть с телефонов</i>
     </body>
 </html>
