--- a/d.html
+++ b/d.html
@@ -37,7 +37,7 @@
         <p><img width="200px" src='logo.png' alt='image'></p>
         <h3>Выберете версию:</h3>
         <p class="p1"> • Labyrinthia alpha v0.0    <a href="Labyrinthia alpha v0.0.zip"><button class="btn">Скачать</button></a></p>
-        <a href="https://telegra.ph/Kak-skachat-Labyrinthia-07-08">Статья о том как установить игру</a>
         <i>Не желательно играть с телефонов</i>
+        <p><a href="https://telegra.ph/Kak-skachat-Labyrinthia-07-08">Статья</a> о том как установить игру</p>
     </body>
 </html>
