--- a/d.html
+++ b/d.html
@@ -38,6 +38,6 @@
         <h3>Выберете версию:</h3>
         <p class="p1"> • Labyrinthia alpha v0.0    <a href="Labyrinthia alpha v0.0.zip"><button class="btn">Скачать</button></a></p>
         <i>Не желательно играть с телефонов</i>
-        <p><a href="https://telegra.ph/Kak-skachat-Labyrinthia-07-08">Статья</a> о том как установить игру</p>
+        <p><a href="https://telegra.ph/Kak-skachat-Labyrinthia-07-08">Статья о том как установить игру</a></p>
     </body>
 </html>
